k8s/base/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: task-platform
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
        app.kubernetes.io/part-of: task-platform
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - name: nginx
          containerPort: 80
        
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
            requests: { cpu: 50m, memory: 64Mi }
            limits: { cpu: 300m, memory: 256Mi }
