k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: task-platform

spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: frontend
  ports:
  - name: http
    port: 5173
    targetPort: http
