k8s/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: task-platform
spec:
  ClusterIP: None
  selector:
    app.kubernetes.io/name: postgres
  ports: 
    name: postgres
    port: 5432
    targetPort: postgres
